samples/_failures_safe/1761315403_adbdb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c306f805.c: In function ‘main’:
./samples/SAFE/__tmp_c306f805.c:158:22: error: expected ‘)’ at end of input
  158 |     graph_add_edge(&g
      |                   ~  ^
      |                      )
./samples/SAFE/__tmp_c306f805.c:158:5: error: too few arguments to function ‘graph_add_edge’
  158 |     graph_add_edge(&g
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_c306f805.c:95:5: note: declared here
   95 | int graph_add_edge(struct Graph* g, int from_id, int to_id, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_c306f805.c:158:5: error: expected declaration or statement at end of input
  158 |     graph_add_edge(&g
      |     ^~~~~~~~~~~~~~
